kubernetes/apps/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  parentRefs:
    - name: main
      namespace: network
  hostnames:
    - "qbittorrent.zlaya.tech"
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
